refactored profile validation